--- a/IssueTracker/Pages/Index.cshtml
+++ b/IssueTracker/Pages/Index.cshtml
@@ -1,83 +1,33 @@
 ﻿@page
 @using System.Security.Claims
-@using IssueTracker.Atrributes
-@model IndexModel
+@model ProjectModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Projects";
 }
+<div class="mb-4">
+    @if (User.Identity.IsAuthenticated)
+    {
+        <a class="btn btn-success" asp-page="New">New Project</a>
+    }
+</div>
 
-<form asp-page="Index" method="get" class="d-flex gap-2 justify-content-between">
-    <div class="row row-cols-auto g-3 align-items-end mb-4">
-        <div class="col-auto">
-            <label asp-for="FilterInput.Query"></label>
-            <input asp-for="FilterInput.Query" class="form-control" placeholder="Search..." />
-        </div>
-        <div class="col-auto">
-            <label asp-for="FilterInput.AssigneeId"></label>
-            <select placeholder="Assignee" class="form-select" asp-for="FilterInput.AssigneeId"
-                asp-items="Model.AvailableAssignees">
-                <option value=""></option>
-            </select>
-        </div>
-        <div class="col-auto">
-            <label asp-for="FilterInput.IssueStatus"></label>
-            <select placeholder="Status" class="form-select" asp-for="FilterInput.IssueStatus"
-                asp-items="Html.GetEnumSelectList<Issue.IssueStatus>()">
-                <option value=""></option>
-            </select>
-        </div>
-        <div class="col-auto">
-            <label asp-for="FilterInput.StartDate"></label>
-            <input asp-for="FilterInput.StartDate" class="form-control" placeholder="Start date" />
-        </div>
-        <div class="col-auto">
-            <label asp-for="FilterInput.EndDate"></label>
-            <input asp-for="FilterInput.EndDate" class="form-control" placeholder="End date" />
-        </div>
-        <div class="col-auto">
-            <button class="btn btn-primary" type="submit">Search</button>
-        </div>
-        <div class="col-auto">
-            @if (User.Identity.IsAuthenticated)
-            {
-                <a class="btn btn-success" asp-page="Issues/New">Add Issue</a>
-            }
-        </div>
-    </div>
-
-    @* @User.FindFirstValue(ClaimTypes.Name) *@
-    @* @User.Identity.Name *@
-</form>
-@* <ul>
-@foreach (var claim in User.Claims)
-{
-<li>@claim.Type => @claim.Value</li>
-}
-</ul> *@
-@if (Model.Issues.Count > 0)
+@if (Model.Projects.Count > 0)
 {
     <ul class="list-unstyled d-flex flex-column gap-2 ">
-    @foreach (var issue in Model.Issues)
+    @foreach (var project in Model.Projects)
         {
             <li class="rounded border p-2">
-                <a class="text-reset" asp-page="Issues/Index" asp-route-id="@issue.Id">
-                    @issue.Title
-                    <span class="text-muted">#@issue.Id</span>
+                <a class="text-reset" asp-page="Issues/Index" asp-route-projectId="@project.Id">
+                    @project.Name
                 </a>
-                <div style="font-size: small;" class="text-muted">
-                    Opened by @issue.AuthorName on @issue.CreatedDate.ToShortDateString()
-                </div>
                 <div style="font-size: smaller;" class="text-muted d-flex gap-2">
-                    Last updated on @issue.UpdatedDate.ToShortDateString()
+                    @project.Description
                 </div>
-                <span class="badge bg-@(ColorHelper.GetColorAttributeValue<Issue.IssueStatus>(issue.Status))">
-                    @issue.Status
-                </span>
             </li>
         }
     </ul>
 }
 else
 {
-    <h1 class="text-center">There are no issues 🎉</h1>
+    <h1 class="text-center">There are no projects 😓</h1>
 }
