--- a/IssueTracker/Pages/Issues/Index.cshtml
+++ b/IssueTracker/Pages/Issues/Index.cshtml
@@ -1,90 +1,105 @@
-@page "{id?}/{handler?}"
+@page "{projectId}"
+@using System.Security.Claims
 @using IssueTracker.Atrributes
 @model IssueModel
-@{
-    ViewData["Title"] = Model.CurrentIssue.Title;
-}
 
-<div>
-    <div class="d-flex gap-2 justify-content-between align-items-center">
-        <h2>@Model.CurrentIssue.Title <span class="text-muted">#@Model.CurrentIssue.Id</span></h2>
-        <a asp-page="Edit" asp-route-id="@Model.CurrentIssue.Id" class="btn btn-primary">Edit</a>
-    </div>
-    <p style="font-size: smaller;">opened by @Model.CurrentIssue.Author?.UserName on @Model.CurrentIssue.CreatedDate</p>
-    <div class="row m-2">
-        <div class="col-8">
-            <div class="border rounded p-3 my-2 bg-light issue-description">@Model.CurrentIssue.Description</div>
-            <div class="d-flex flex-column gap-2">
-                @if (Model.CurrentIssue.Comments.Count > 0)
-                {
-                    @foreach (var comment in Model.CurrentIssue.Comments)
-                    {
-                        <div class="border rounded">
-                            <div class="p-2 rounded-top border-bottom bg-light">
-                                @(comment.User?.UserName ?? "Unknown") <span style="font-size: smaller;" class="text-muted">on
-                                    @comment.UpdatedDate</span>
-                            </div>
-                            <div class="p-2">@comment.Body</div>
-                        </div>
-                    }
-                }
-                else
-                {
-                    <h4 class="text-muted text-center">No Comments</h4>
-                }
-
-                <div class="my-3">
-                    <form asp-page="Index" asp-page-handler="Comment">
-                        <div class="mb-2">
-                            <label asp-for="NewCommentCommand.Body">Comment</label>
-                            <textarea class="form-control" asp-for="NewCommentCommand.Body" rows="6"></textarea>
-                        </div>
-                        <input value="@Model.CurrentIssue.Id" asp-for="NewCommentCommand.IssueId">
-                        <button type="submit" class="btn btn-primary">Post</button>
-                    </form>
-                </div>
-            </div>
+<form asp-page="Index" method="get" class="d-flex gap-2 justify-content-between">
+    <div class="row row-cols-auto g-3 align-items-end mb-4">
+        <div class="col-auto">
+            <label asp-for="FilterInput.Query"></label>
+            <input asp-for="FilterInput.Query" class="form-control" placeholder="Search..." />
         </div>
-        <div class="col-4">
-            <div class="mb-3 border rounded m-2">
-                <div class="rounded-top border-bottom bg-light fw-bold p-2">Assignees</div>
-                <div class="p-2">
-                    @if (Model.CurrentIssue.Assignees.Count > 0)
-                    {
-                        <ul class="m-0">
-                            @foreach (var assignee in Model.CurrentIssue.Assignees)
-                            {
-                                <li>@assignee.UserName</li>
-                            }
-                        </ul>
-                    }
-                    else
-                    {
-                        <div class="text-muted">No assignees</div>
-                    }
+        <div class="col-auto">
+            <label asp-for="FilterInput.AssigneeId"></label>
+            <select placeholder="Assignee" class="form-select" asp-for="FilterInput.AssigneeId"
+                asp-items="Model.AvailableAssignees">
+                <option value=""></option>
+            </select>
+        </div>
+        <div class="col-auto">
+            <label asp-for="FilterInput.IssueStatus"></label>
+            <select placeholder="Status" class="form-select" asp-for="FilterInput.IssueStatus"
+                asp-items="Html.GetEnumSelectList<Issue.IssueStatus>()">
+                <option value=""></option>
+            </select>
+        </div>
+        <div class="col-auto">
+            <label asp-for="FilterInput.StartDate"></label>
+            <input asp-for="FilterInput.StartDate" class="form-control" placeholder="Start date" />
+        </div>
+        <div class="col-auto">
+            <label asp-for="FilterInput.EndDate"></label>
+            <input asp-for="FilterInput.EndDate" class="form-control" placeholder="End date" />
+        </div>
+        <div class="col-auto">
+            <button class="btn btn-primary" type="submit">Search</button>
+        </div>
+        <div class="col-auto">
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a class="btn btn-success" asp-page="New" asp-route-projectId="@Model.CurrentProject.Id">Add Issue</a>
+            }
+        </div>
+    </div>
+
+    @* @User.FindFirstValue(ClaimTypes.Name) *@
+    @* @User.Identity.Name *@
+</form>
+@* <ul>
+@foreach (var claim in User.Claims)
+{
+<li>@claim.Type => @claim.Value</li>
+}
+</ul> *@
+<div class="row">
+    <div class="col-9">
+        @if (Model.CurrentProject.Issues.Count > 0)
+        {
+            <ul class="list-unstyled d-flex flex-column gap-2 ">
+                @foreach (var issue in Model.CurrentProject.Issues)
+                {
+                    <li class="rounded border p-2">
+                        <a class="text-reset" asp-page="Detail" asp-route-id="@issue.Id">
+                            @issue.Title
+                            <span class="text-muted">#@issue.Id</span>
+                        </a>
+                        <div style="font-size: small;" class="text-muted">
+                            Opened by @issue.AuthorName on @issue.CreatedDate.ToShortDateString()
+                        </div>
+                        <div style="font-size: smaller;" class="text-muted d-flex gap-2">
+                            Last updated on @issue.UpdatedDate.ToShortDateString()
+                        </div>
+                        <span class="badge bg-@(ColorHelper.GetColorAttributeValue<Issue.IssueStatus>(issue.Status))">
+                            @issue.Status
+                        </span>
+                    </li>
+                }
+            </ul>
+        }
+        else
+        {
+            <h1 class="text-center">There are no issues 🎉</h1>
+        }
+    </div>
+    <div class="col-3">
+        <div class="mb-3 border rounded m-2">
+            <div class="rounded-top border-bottom bg-light fw-bold p-2">Project Details</div>
+            <div class="p-2 d-flex gap-2 flex-column">
+                <div>
+                    <div class="fw-bold">
+                        Project Name
+                    </div>
+                    <div>
+                        @Model.CurrentProject.Name
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3 border rounded m-2">
-                <div class="rounded-top border-bottom bg-light fw-bold p-2">Status</div>
-                <div class="p-2">
-                    <span
-                        class="badge bg-@(ColorHelper.GetColorAttributeValue<Issue.IssueStatus>(Model.CurrentIssue.Status))">@Model.CurrentIssue.Status</span>
-                </div>
-            </div>
-            <div class="mb-3 border rounded m-2">
-                <div class="rounded-top border-bottom bg-light fw-bold p-2">Tags</div>
-                <div class="p-2">
-                    @if (Model.CurrentIssue.Tags.Count > 0)
-                    {
-                        @foreach (var tag in Model.CurrentIssue.Tags)
-                        {
-                            <span class="badge bg-@tag.Color">@tag.Label</span>
-                        }
-                    }
-                    else
-                    {
-                        <div class="text-muted">No tags</div>
-                    }
+                <div>
+                    <div class="fw-bold">
+                        Project Description
+                    </div>
+                    <div>
+                        @Model.CurrentProject.Description
+                    </div>
                 </div>
             </div>
         </div>
